--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
-    "next": "14.2.4",
+    "next": "^14.2.5",
     "next-nprogress-bar": "^2.3.12",
     "nextjs-progressbar": "^0.0.16",
     "nextjs-toploader": "^1.6.12",
